--- a/.github/workflows/selenium-tests.yml
+++ b/.github/workflows/selenium-tests.yml
@@ -1,31 +1,49 @@
-name: Selenium Java Tests
+name: Selenium WebDriver CI
 
+# Trigger on push and pull request to main branch
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
   pull_request:
-    branches: [ main ]
+    branches:
+      - main
 
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
 
     steps:
+      # Step 1: Checkout the repository
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
 
-      - name: Set up JDK 18
-        uses: actions/setup-java@v3
+      # Step 2: Set up Java (JDK 11)
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
         with:
           java-version: '11'
-          distribution: 'temurin'
 
+      # Step 3: Cache Maven dependencies (this speeds up the build)
       - name: Cache Maven dependencies
-        uses: actions/cache@v3
+        uses: actions/cache@v2
         with:
-          path: ~/.m2
+          path: ~/.m2/repository
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-maven-
+          restore-keys: |
+            ${{ runner.os }}-maven-
 
-      - name: Run Tests with Maven
+      # Step 4: Install Maven and run tests
+      - name: Run Maven tests
         run: mvn clean test
+
+      # Step 5: Upload test results as artifacts (optional)
+      - name: Upload TestNG Results
+        uses: actions/upload-artifact@v2
+        with:
+          name: testng-results
+          path: target/test-classes/testng-results.xml
+
+      # Step 6: Optionally, you can integrate with Allure for nice reports
+      # - name: Generate Allure Report
+      #   run: allure serve target/allure-results
