--- a/.github/workflows/selenium-tests.yml
+++ b/.github/workflows/selenium-tests.yml
@@ -1,6 +1,5 @@
-name: Selenium WebDriver CI
+name: Selenium Tests
 
-# Trigger on push and pull request to main branch
 on:
   push:
     branches:
@@ -10,40 +9,37 @@ on:
       - main
 
 jobs:
-  build:
+  selenium-tests:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout the repository
+      # Checkout code from repository
       - name: Checkout code
         uses: actions/checkout@v2
 
-      # Step 2: Set up Java (JDK 11)
+      # Set up Java JDK
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
           java-version: '11'
 
-      # Step 3: Cache Maven dependencies (this speeds up the build)
-      - name: Cache Maven dependencies
-        uses: actions/cache@v2
+      # Set up Maven
+      - name: Set up Maven
+        uses: actions/setup-java@v2
         with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
+          maven-version: '3.8.1'
 
-      # Step 4: Install Maven and run tests
-      - name: Run Maven tests
-        run: mvn clean test
+      # Install dependencies
+      - name: Install dependencies
+        run: mvn clean install
 
-      # Step 5: Upload test results as artifacts (optional)
-      - name: Upload TestNG Results
+      # Run tests with Maven
+      - name: Run Selenium tests
+        run: mvn test
+
+      # Upload test results to GitHub Actions
+      - name: Upload test results
         uses: actions/upload-artifact@v2
         with:
-          name: testng-results
-          path: target/test-classes/testng-results.xml
-
-      # Step 6: Optionally, you can integrate with Allure for nice reports
-      # - name: Generate Allure Report
-      #   run: allure serve target/allure-results
+          name: test-results
+          path: target/surefire-reports/
